Port over current wiki

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,1 +1,3 @@
-# Hi
+# SkinsRestorer
+SkinsRestorer is a Minecraft plugin that allows the modification of ingame skins. That also allows the restoring of skins on offline mode servers.
+
