First work on porting to nextra

--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,4 +1,4 @@
-![](http://i.imgur.com/WsKJtUWg.png)
+![SkinsRestorer Banner](/assets/WsKJtUWg.png)
 
 Welcome to the official SkinsRestorer wiki page! Here you will (likely) find all the questions and information you need,
 and how to make the best usage of SkinsRestorer, so hop on and get started
@@ -20,7 +20,7 @@ their skins by typing a single command.
 
 How to help? -> [Contribute on GitHub](https://github.com/SkinsRestorer/SkinsRestorerX)
 
-## Contributors:
+## Contributors
 
 They can be found at the [GitHub Insights](https://github.com/SkinsRestorer/SkinsRestorerX/graphs/contributors)
 
