--- a/pages/docs/setup/locale-translations.mdx
+++ b/pages/docs/setup/locale-translations.mdx
@@ -1,4 +1,8 @@
-[WARNING] IF you are using BungeeCord, you must configure locals on BungeeCord side.
+import { Callout } from 'nextra-theme-docs'
+
+<Callout type="warning" emoji="⚠️">
+  If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on the proxy.
+</Callout>
 
 ### Table Of Contents
 
