--- a/pages/docs/features/api.mdx
+++ b/pages/docs/features/api.mdx
@@ -45,7 +45,7 @@ wip
 first you need to register the channel (on startup)
 `Bukkit.getMessenger().registerOutgoingPluginChannel(this, "sr:messagechannel");`
 
-example of how we send /skin set <player> <skin> over plugin message channel:
+example of how we send `/skin set <player> <skin>` over plugin message channel:
 
 ```java
         try {
