--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -71,4 +71,4 @@ Done!
 8. upload / replace it on your bungee/plugins/skinsrestorer/skins folder
 9. if you don't have bungee, put it in your spigot
    (if you use mysql, open the file and insert the data in your skins rows.)
-   done! you should now be able to do /skin <name> and it will appear!
+   done! you should now be able to do `/skin <name>` and it will appear!
