--- a/pages/docs/setup/configuration.mdx
+++ b/pages/docs/setup/configuration.mdx
@@ -26,7 +26,7 @@ Here are some little tips:
 
 # Who can change skins?
 
-With SkinsRestorer, players have the ability to use /skin <skin> to change there look. Who should be able to do this?
+With SkinsRestorer, players have the ability to use `/skin <skin>` to change there look. Who should be able to do this?
 
 [[Everyone](#everyone) / [Special rank](#special-ranks) / [No one](#no-one)]
 
