--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -1,17 +1,6 @@
-### Table Of Contents
+### Custom Skins
 
-- [Introduction](#introduction)
-
-    - [how to apply custom skin](#how-to-generate-custom-skin)
-
-    - [apply custom default skins](#apply-custom-default-skins)
-
-- [Skinfile Generator for dummies](#skinfile-generator-for-dummies)
-
-### Introduction
-
-Because SkinsRestorer does not have a public API, We have a Development providing 2 simple tools for uploading custom png
-files to SkinsRestorer!
+Because SkinsRestorer does not have a public API, We have a developed two tools for uploading custom png files to SkinsRestorer!
 
 ### How to generate custom skin
 
