--- a/pages/docs/misc/about-skin-player-files.mdx
+++ b/pages/docs/misc/about-skin-player-files.mdx
@@ -1,7 +1,7 @@
 ## Why does SR need .skin file
 
-SkinsRestorer need the .skin file to make sure that we have a cached version of the skin on your server, the .skin file
-contains the same data that Mojang would send to your server when you are in online mode.
+SkinsRestorer uses .skin files to keep a cached version of the skin on your server.
+It contains the same data that Mojang would send to your server when you are in online mode.
 We cache the information in a file for you, so we need to make less requests to Mojangs' API and can allow skins even
 when Mojangs' servers are down.
 
