--- a/pages/docs/misc/incompatibility-list.mdx
+++ b/pages/docs/misc/incompatibility-list.mdx
@@ -1,14 +1,14 @@
 #### Incompatible clients
 
-Launchers that have build in skin mods or other game altering mods that block refresher.
+Launchers that have built-in skin mods or other game altering mods that block SkinsRestorer.
 
-* tlauncher
+* TLauncher
 
-## general plugin types causing issues
+## General plugin types causing issues
 
-* mostly all other skin plugins like myskin
-* Script - they can hook into skins
-* small / custom world plugins
+* Mostly all other skin plugins like myskin
+* Skript - they can hook into skins
+* Custom world plugins
 * Some TabList plugins
 
 #### Plugins that need config change
@@ -16,16 +16,10 @@ Launchers that have build in skin mods or other game altering mods that block re
 * FastLogin -> FastLogin config.yml forwardSkin: false
 * MundoSK -> MundoSK config.yml usecustomskins: false
 
-## known plugin list
+## Known plugin list
 
 * AntiBotDeluxe
-* DeathMessagePrime
 * Nicknamer
 * OldCombatMechanics (older versions)
 * Tablisknu
 * WorldChangeScreenRemover
-
-## regular expression list.
-
-last update 29-8-2020
-(AntiBotDeluxe|Nicknamer|WorldChangeScreenRemover|Tablisknu|OldCombatMechanics|DeathMessagePrime|MundoSK|FastLogin)
