--- a/pages/docs/misc/cannot-fetch-new-skins.mdx
+++ b/pages/docs/misc/cannot-fetch-new-skins.mdx
@@ -1,7 +1,8 @@
 If, by running `/sr status` you get the following red message:
-> Plugin currently can't fetch new skins. You might check out our discord at [redacted]
 
-then this means your server cannot connect to the APIs the plugin requires to work.
+ˋ> Plugin currently can't fetch new skins. You might check out our discord at [redacted]ˋ
+
+Then this means your server cannot connect to the APIs the plugin requires to work.
 
 --- 
 
@@ -16,6 +17,3 @@ Our plugin needs the following APIs over the following ports to be functional
 | https://api.mojang.com/   | 443 - 53 |
 | https://api.ashcon.app/   | 443 - 53 |
 | https://api.mineskin.org/ | 443 - 53 |
-
----
-**This page is currently a stub, thus it may be edited at any time.**
