More work on migration and first work on github card

--- a/pages/docs/setup/troubleshooting.mdx
+++ b/pages/docs/setup/troubleshooting.mdx
@@ -1,25 +1,10 @@
-[!] This doc is under highly construction [!]
-
-## Table Of Contents
-
-- [Basic Troubleshoot](#Basic-Troubleshoot)
-    - [Spigot](#Basic-Spigot-Troubleshooting)
-    - [Bungee](#Basic-Bungee-Troubleshooting)
-
-- [Advanced troubleshooting](#advanced-troubleshoot)
-
-  If skins won't download, see:
-    - [connection](#connection)
-
-      If skins won't apply but do download see:
-    - [plugin incompatibility](#plugin-incompatibility)
-
 ## Basic Troubleshoot
 
 ### Basic Spigot Troubleshooting
 
-- [!] Kindly check these steps below for asking support on discord!
-
+<Callout type="info" emoji="ℹ️">
+  Kindly check these steps below before asking for support on discord!
+</Callout>
 
 1. Check
    the [Basic Installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer#basic-installation)
