Remove TOC and experiment with gh

--- a/pages/docs/features/api.mdx
+++ b/pages/docs/features/api.mdx
@@ -42,9 +42,9 @@ To bukkit:
 
 First you need to register the channel (on startup)
 
-ˋˋˋjava
+```java
 Bukkit.getMessenger().registerOutgoingPluginChannel(this, "sr:messagechannel");
-ˋˋ`
+```
 
 Example of how we send `/skin set <player> <skin>` over plugin message channel:
 
