--- a/pages/docs/setup/commands-permissions.mdx
+++ b/pages/docs/setup/commands-permissions.mdx
@@ -1,13 +1,4 @@
-Here are the SkinsRestorer commands.
-
-## Table Of Contents
-
-- [Commands](#commands)
-    - [Player commands](#player-commands)
-    - [Admin commands](#admin-commands)
-- [List of permissions](#permission-list)
-
-## Commands
+# Commands
 
 Below is a list of commands and permissions. For each permission, you need to have the parent's permission. so for
 example:
