--- a/pages/docs/setup/configuration.mdx
+++ b/pages/docs/setup/configuration.mdx
@@ -1,22 +1,4 @@
-# Info
-
-### Table Of Contents
-
-- [Config guide](#config-guide)
-
-    - [Who can change skins?](#who-can-change-skins)
-
-    - [Default skins?](#default-skins)
-
-    - [Which skin can players set?](#which-skin-can-players-set)
-
-- [Admin / event guides](#admin-guide)
-
-    - [Apply skin to all & future](#apply-skin-to-all)
-
-- [Default Config](#default-config)
-
-## Config Guide
+# Configuration
 
 We want SkinsRestorer to be easy to use. That's why there is a little advanced config option.
 the plugin should be able to run without config needed but if you feel like you need it then you are at the right place
