--- a/pages/docs/setup/locale-translations.mdx
+++ b/pages/docs/setup/locale-translations.mdx
@@ -4,30 +4,7 @@ import { Callout } from 'nextra-theme-docs'
   If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on the proxy.
 </Callout>
 
-### Table Of Contents
-
-Community translation:
-
-- [How to Contribute](#how-to-Contribute)
-- [Download updated translation]
-
-Select language:
-- [language codes](#language-codes)
-- [Change fallback language](#change-fallback-language)
-
-Customization info:
-
-- [Help messages](#help-messages)
-- [Permissions messages](#permissions-messages)
-- [Success Messages](#success-messages)
-- [Other useful messages](#other-useful-messages)
-- [ERROR messages](#error-messages)
-- [Prefix](#prefix)
-- [Skins gui](#skins-gui)
-- [Custom help](#custom-help)
-
-Default values:
-
+## Default values
 - [languages](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/resources/languages)
   - [language_english](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language.properties)
 - [command.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/command.properties)
