--- a/pages/docs/misc/cannot-fetch-new-skins.mdx
+++ b/pages/docs/misc/cannot-fetch-new-skins.mdx
@@ -1,6 +1,6 @@
 If, by running `/sr status` you get the following red message:
 
-ˋ> Plugin currently can't fetch new skins. You might check out our discord at [redacted]ˋ
+`> Plugin currently can't fetch new skins. You might check out our discord at [redacted]`
 
 Then this means your server cannot connect to the APIs the plugin requires to work.
 
