--- a/pages/docs/features/api.mdx
+++ b/pages/docs/features/api.mdx
@@ -1,3 +1,4 @@
+# SkinsRestorerAPI
 To makes things more easy, we created an example plugin that connects to the coding API that can be found
 here: [[link](https://github.com/SkinsRestorer/SkinsRestorerAPIExample)]
 
