--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -1,10 +1,10 @@
-### Custom Skins
+# Custom Skins
 
 Because SkinsRestorer does not have a public API, We have a developed two tools for uploading custom png files to SkinsRestorer!
 
-### How to generate custom skin
+## How to generate a custom skin
 
-#### Skinfile Generator
+### Skinfile Generator
 
 we get a lot of questions about how to apply a custom skin, lucky riflowth got you covered!
 
@@ -27,7 +27,7 @@ This web app allows your players to upload .png skin files to the database that 
 people can use their own skins without premium account!
 [[Click here for the Github]](https://github.com/riflowth/SkinSystem/)
 
-#### Manual Generating
+### Manual Generating
 
 1. make sure the file and cape(optional) are online with a .png link
 2. decode a skin to use the template (for
@@ -36,7 +36,7 @@ people can use their own skins without premium account!
 4. encode it again with base64 and apply it to the matching .skin file
 5. make sure you set the 3rd line on 2524608000000 (the year 2050) which will avoid getting the skin invalid
 
-### Apply custom default skins
+## Apply custom default skins
 
 if you want to apply a default skin for your server you can do the following:
 
