--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,4 +1,4 @@
-![SkinsRestorer Banner](/assets/WsKJtUWg.png)
+![SkinsRestorer Banner](/assets/banner.png)
 
 Welcome to the official SkinsRestorer wiki page! Here you will (likely) find all the questions and information you need,
 and how to make the best usage of SkinsRestorer, so hop on and get started
