--- a/pages/docs/misc/about-skin-player-files.mdx
+++ b/pages/docs/misc/about-skin-player-files.mdx
@@ -1,4 +1,6 @@
-## Why does SR need .skin file
+# About .skin and .player files
+
+## Why does SR need a .skin file?
 
 SkinsRestorer uses .skin files to keep a cached version of the skin on your server.
 It contains the same data that Mojang would send to your server when you are in online mode.
