--- a/pages/docs/misc/incompatibility-list.mdx
+++ b/pages/docs/misc/incompatibility-list.mdx
@@ -1,4 +1,6 @@
-#### Incompatible clients
+# Incompatibility list
+
+## Incompatible clients
 
 Launchers that have built-in skin mods or other game altering mods that block SkinsRestorer.
 
@@ -11,7 +13,7 @@ Launchers that have built-in skin mods or other game altering mods that block Sk
 * Custom world plugins
 * Some TabList plugins
 
-#### Plugins that need config change
+## Plugins that need config change
 
 * FastLogin -> FastLogin config.yml forwardSkin: false
 * MundoSK -> MundoSK config.yml usecustomskins: false
