--- a/pages/docs/setup/commands-permissions.mdx
+++ b/pages/docs/setup/commands-permissions.mdx
@@ -1,4 +1,4 @@
-# Commands
+# Commands and Permissions
 
 Below is a list of commands and permissions. For each permission, you need to have the parent's permission. so for
 example:
