--- a/pages/docs/setup/installing-skinsrestorer.mdx
+++ b/pages/docs/setup/installing-skinsrestorer.mdx
@@ -1,3 +1,5 @@
+# Installing SkinsRestorer
+
 ## Creator notes
 
 In here you can find everything you need for your first time installation of SkinsRestorer as well as the recommended
