--- a/pages/docs/setup/troubleshooting.mdx
+++ b/pages/docs/setup/troubleshooting.mdx
@@ -1,3 +1,5 @@
+# Troubleshooting
+
 ## Basic Troubleshoot
 
 ### Basic Spigot Troubleshooting
@@ -41,7 +43,7 @@
   For Advanced owners, feel free to check [Advanced Troubleshoot](#Advanced-Troubleshoot) for what else you can trouble
   shoot
 
-# Advanced Troubleshoot
+## Advanced Troubleshoot
 
 ### Commands not working
 
