--- a/pages/docs/misc/cannot-fetch-new-skins.mdx
+++ b/pages/docs/misc/cannot-fetch-new-skins.mdx
@@ -1,3 +1,5 @@
+# Cannot fetch new skins
+
 If, by running `/sr status` you get the following red message:
 
 `> Plugin currently can't fetch new skins. You might check out our discord at [redacted]`
@@ -6,7 +8,7 @@ Then this means your server cannot connect to the APIs the plugin requires to wo
 
 --- 
 
-### How to fix it?
+## How to fix it?
 
 This is a good question, and you are the right place to get an answer.
 Our plugin needs the following APIs over the following ports to be functional
